<resources>
    <string name="app_name">Product Barcodes</string>
    <string name="txt_btn_search">Search</string>
    <string name="txt_et_search">Search for products</string>
    <string name="txt_et_name">Name</string>
    <string name="txt_et_sku">SKU</string>
    <string name="txt_console">Console</string>
    <string name="txt_btn_cancel">Cancel</string>
    <string name="txt_btn_save">Save</string>
    <string name="txt_btn_test">Test</string>
    <string-array name="console_array">
        <item>None</item>
        <item>Xbox One</item>
        <item>Xbox X</item>
        <item>PS4</item>
        <item>PS5</item>
        <item>Switch</item>
    </string-array>
</resources>